# mini-RAG

./: .env.example  .envrc  .gitignore  Makefile  README.md  main.py  mise.toml  pyproject.toml  text.txt
.devcontainer/: devcontainer.json  postCreateCommand.sh
docker/: .env.example  docker-compose.yml
routes/: base.py  main.py
src/: .env  main.py
src/controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py  pyproject.toml
src/helpers/: config.py
src/mini_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/models/: AssetModel.py  BaseDataModel.py  ChunkModel.py  ProjectModel.py  __init__.py  pyproject.toml
src/models/db_schemes/: __init__.py  asset.py  data_chunk.py  project.py
src/models/enums/: ProcessingEnum.py  ResponseEnums.py  __init__.py
src/routes/: base.py  data.py  pyproject.toml
src/routes/schemas/: data.py
